# Bitcoin-paper-trading-agent

./: .dockerignore  .env.local.example  .gitignore  AUTONOMOUS_AI_PAPER_TRADING_ARCHITECTURE.md  Autonomous Paper Trading Agent - Architecture Documentation.md  Autonomous Paper Trading Agent - Deployment Guide.md  Autonomous Paper Trading Agent.md  Dockerfile  Dockerfile.python  Dockerfile.rust  Quick Start Guide - Autonomous Paper Trading Agent.md  README.md  Setup Checklist - Autonomous Paper Trading Agent.md  VERCEL_DEPLOY_STEPS.md  design_spec.md  docker-compose.yml  fix_cron.sh  fix_cron_scalp.sh  next.config.mjs  nginx.conf  package-lock.json  package.json  perplexity report.md  ssh-key-2026-05-31.key.pub  tailwind.config.ts  task.md  vercel.json
.github/workflows/: cron.yml  deploy.yml
public/: backtest.worker.js
src-python/: data_fetcher.py  requirements.txt
src-python/backtester/: engine.py
src-rust/: Cargo.toml
src-rust/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AuthGate.tsx  Dashboard.tsx  EquityCurve.tsx  TradingChart.tsx
src/daemon/: tradingDaemon.ts  websocketDataMesh.ts
src/lib/: auth.ts  coingecko.ts  env.ts  gemini.ts  indicators.ts  llmProxy.ts  logger.ts  market.ts  perplexity.ts  portfolio.ts  redis.ts  riskManager.ts  scalpEngine.ts  signals.ts  statistics.ts  supabase.ts  telegram.ts  types.ts
src/lib/ai/: autonomousBrain.ts  autonomousRiskGovernor.ts  hyperbolicTimeChamber.ts  marketWorldModel.ts  positionManager.ts  predictionLedger.ts  schemas.ts  tradingKnowledge.ts
src/lib/data/: sentiment.ts  (+4 more)
(+20 files in other folders)
